add new Permissions to Role User